# py-twitch-eventsub

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: mirror-to-gitlab.yml
src/py-twitch-eventsub/: __init__.py  chat.py  controller.py  handlers.py  models.py  subscriber.py
src/py_twitch_eventsub/: __init__.py  chat.py  cheer.py  controller.py  handlers.py  logger.py  models.py  shared.py  subscriber.py
src/py_twitch_eventsub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
