[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_twitch_eventsub" # What users type in 'pip install'
version = "0.1.0"
authors = [{ name = "pmrch", email = "patrik.fejes@gmail.com" }]
description = "A lightweight async library for handling Twitch EventSub WebSocket events"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pydantic>=2.12", "websockets>=14.0", "httpx>=0.26"]

[tool.setuptools.packages.find]
where = ["src"] # Tells setuptools to look in the 'src' directory
